--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -2,6 +2,40 @@
 
 <h1>스프링 부트로 시작하는 웹 서비스 ver.2</h1>
 <div class = "col-md-12">
+    <!--로그인 기능 영역 -->
+    <div class="row">
+        <div class="col-md-6">
+            <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+            {{#userName}}
+                <!--
+                    머스테치는 다른 언와아 같이 if 문을 제공하지 않는다.
+                    true/false 여부만 판단한다.
+                    그래서 머스테치에서는 항상 최종값을 넘겨줘야 한다.
+                    여기서는 userName이 있으면 userName을 노출시키도록 구성했다.
+                -->
+                Logged in as: <span id="user">{{userName}}</span>
+                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+                <!--
+                    a href="/logout"
+                    스프링 시큐리티에서 기본적으로 제공하는 로그아웃 URL이다.
+                    즉 개발자가 별도로 저 url에 해당하는 컨트롤러를 만들 필요가 없다.
+                    securityconfig클래스에서 url을 변경할 순 있지만 기본 url을 사용해도 충분하다.
+                -->
+            {{/userName}}
+            {{^userName}}
+                <!--
+                    머스테치에서 해당값이 존재하지 않는 경우에는 ^를 사용한다.
+                    여기서는 userName이 없다면 로그인 버튼을 노출시키도록 구성했다.
+                -->
+                <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+            <!--
+                스프링 시큐리티에서 기본적으로 제공하는 로그인 url이다.
+                로그아웃 url과 마찬가지로, 개발자가 별도의 컨트롤러 생성할 필요가 없다.
+            -->
+                <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
+            {{/userName}}
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-6">
             <a href="posts/save" role="button" class="btn btn-primary">글등록</a>
